--- a/components/prompt/prompt.css
+++ b/components/prompt/prompt.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   background: var(--soft-grey);
+  height: var(--prompt-height);
 }
 
 [data-component~='prompt'] .outline {
